# sp_antidrone_26

./: .gitignore  CMakeLists.txt  detector.hpp  visualize.cpp
config/: antidrone.yaml  camera.yaml  camera2gimbal.yaml
io/: CMakeLists.txt
io/configs/: camera.yaml
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp
io/ros2/: ros2.cpp  ros2.hpp  subscribe2location.cpp  subscribe2location.hpp
tools/: CMakeLists.txt  camera2gimbal.cpp  camera2gimbal.hpp  extended_kalman_filter.cpp  extended_kalman_filter.hpp  math_tools.cpp  solver.cpp  solver.hpp  targetyawpitch.cpp  targetyawpitch.hpp  trajectory.cpp  trajectory.hpp
